public interface Pet {
    void setName(String name);
    void getName();
    void play();
}
